CrOS Shelf: let ShelfWidget react to shelf alignment changes

This fixes a bug where the shelf's opaque background would not get
updated when the shelf's alignment changed but didn't change bounds
(i.e. from left to right and vice versa).

TBR=manucornet@chromium.org

(cherry picked from commit ee2462c35d23e2f2b38aa95fe749b62f5b17a3e5 [formerly 659ba835aaa4edd4a66ce3d49af82b6917c6042a])

Bug: 880221
Change-Id: Iafc6eb013ec598177a555317e36adb8cce2341f0
Reviewed-on: https://chromium-review.googlesource.com/1204972
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588669}
Reviewed-on: https://chromium-review.googlesource.com/1213663
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#168}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: a150e2c5cc57a236058dd158b60c19e367c4078b